NF-262 Changed inputYesNo to use Html for hint

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/AttachMoreDocumentsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/amendclaim/AttachMoreDocumentsView.scala.html
@@ -39,7 +39,7 @@
         @yesNo(
             form = form,
             label = messages("amend.attach_more_documents.title"),
-            hint = Some(messages("amend.attach_more_documents.hint")),
+            hint = Some(Html(messages("amend.attach_more_documents.hint"))),
             inline = true
         )
 
