NF-290 Changed back to Bank details based on PR

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersView.scala.html
@@ -242,12 +242,11 @@
             Some(SummaryListRow(
                 classes = "bank_details_type_row",
                 key = Key(
-                    content = HtmlContent(messages("check_answers.payment.bankDetails"))
+                    content = Text(messages("check_answers.payment.bankDetails"))
                 ),
                 value = Value(
                     content = HtmlContent(Seq(
                         claim.bankDetails.accountName,
-                        "",
                         claim.bankDetails.sortCode,
                         claim.bankDetails.accountNumber
                     ).mkString("<br>"))
