--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersView.scala.html
@@ -240,19 +240,35 @@
                 )
             ),
             Some(SummaryListRow(
-                classes = "bank_details_type_row",
+                classes = "bank_details_account_name_row govuk-summary-list__row--no-border",
                 key = Key(
-                    content = Text(messages("check_answers.payment.bankDetails"))
+                    content = Text(messages("check_answers.payment.accountName"))
                 ),
                 value = Value(
-                    content = HtmlContent(Seq(
-                        claim.bankDetails.accountName,
-                        claim.bankDetails.sortCode,
-                        claim.bankDetails.accountNumber
-                    ).mkString("<br>"))
+                    content = Text(claim.bankDetails.accountName)
                 ),
                 actions = None
-            ))
+            )),
+            Some(SummaryListRow(
+                classes = "bank_details_sortCode_row govuk-summary-list__row--no-border",
+                key = Key(
+                content = Text(messages("check_answers.payment.sortCode"))
+                ),
+                value = Value(
+                content = Text(claim.bankDetails.sortCode)
+                ),
+                actions = None
+            )),
+            Some(SummaryListRow(
+                classes = "bank_details_accountNumber_row",
+                key = Key(
+                content = Text(messages("check_answers.payment.accountNumber"))
+                ),
+                value = Value(
+                content = Text(claim.bankDetails.accountNumber)
+                ),
+                actions = None
+            )),
         )
     )
 
