NF-317 Minor merge fixes

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersView.scala.html
@@ -353,7 +353,7 @@
                 value = Value(
                     content = Text(claim.bankDetails.accountName)
                 ),
-                actions = actions = Some(Actions(
+                actions = Some(Actions(
                     items = Seq(
                         actionItem(
                             href = makeclaim.routes.CheckYourAnswersController.onChange(CreatePageNames.bankDetails).url,
