NF-318 - change text on change link

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersView.scala.html
@@ -173,7 +173,7 @@
                     items = Seq(
                         actionItem(
                             href = makeclaim.routes.CheckYourAnswersController.onChange(CreatePageNames.dutySummary).url,
-                            content = HtmlContent(linkContent(messages("site.change"))),
+                            content = HtmlContent(linkContent(messages("check_answers.repayment.total.change"))),
                             visuallyHiddenText = Some(messages("check_answers.repayment.total.accessible"))
                         )
                     )
