NF-327 - added colon to make selector more explicit but not too brittle

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Head.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Head.scala.html
@@ -28,7 +28,7 @@
 
 <noscript>
     <style type="text/css">
-            a[href^="javascript"].govuk-back-link { visibility: hidden; }
+            a[href^="javascript:"].govuk-back-link { visibility: hidden; }
     </style>
 </noscript>
 
