NF-338 - test fixes

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersErrorView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CheckYourAnswersErrorView.scala.html
@@ -43,7 +43,7 @@
 @layout(pageTitle = ErrorTitle(messages("check_answers.missing.title")), backLink) {
 
     @formHelper(action = CheckYourAnswersController.onResolve(), 'autoComplete -> "off") {
-        @errorSummary(Seq(FormError("nidac-submit", messages("check_answers.missing.error"))))
+        @errorSummary(Seq(FormError("nidac-submit", "check_answers.missing.error")))
 
         @components.heading(messages("check_answers.missing.title"))
 
