--- a/app/assets/stylesheets/media.scss
+++ b/app/assets/stylesheets/media.scss
@@ -2,17 +2,18 @@
 ====================================
 CSS to support print media.  Hides all links (including sign-out link on the header), removes the footer section
 from the view and the page (url/page number, etc.)
+
+.nidac-!-display-only-print - is used to hide content except when printing
 ====================================
 */
 @media all {
-  .nidac-print-content { display: none}
+  .nidac-\21-display-only-print { display: none}
 }
 @media print {
   @page { margin: 10px }
   .govuk-section-break { page-break-inside : avoid }
   .govuk-link { display: none; }
-  .nidac-print-content{ display: contents}
-  .nidac-print-hidden{ display: none}
+  .nidac-\21-display-only-print{ display: contents}
   footer { display: none; }
   @-moz-document url-prefix() {
     .govuk-summary-list__key { width: 40%; }
