NF-372 - sign-out url for non-authorised users

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Layout.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Layout.scala.html
@@ -56,7 +56,13 @@
 }
 
 @signOutHref = @{
-    if(logout) Some(SignOutController.signOut().url) else None
+    if(logout) {
+        if(request.isInstanceOf[IdentifierRequest[_]])
+            Some(SignOutController.signOut().url)
+        else
+            Some(appConfig.signOutUrl)
+    }
+    else None
 }
 @headerBlock = {
     @hmrcHeader(
