--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Layout.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/Layout.scala.html
@@ -21,14 +21,11 @@
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.views.components.Title
 @import uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.viewmodels.NavigatorBack
 
-@import uk.gov.hmrc.hmrcfrontend.views.html.components.HmrcHeader
-@import uk.gov.hmrc.hmrcfrontend.views.html.components.Header
-@import uk.gov.hmrc.hmrcfrontend.views.viewmodels.language
 @import views.html.helper.CSPNonce
 
 @this(
         govukLayout: GovukLayout,
-        hmrcHeader: HmrcHeader,
+        hmrcStandardHeader: HmrcStandardHeader,
         head: Head,
         hmrcStandardFooter: HmrcStandardFooter,
         languageSelect: LanguageSelect,
@@ -64,14 +61,13 @@
 }
 
 @headerBlock = {
-    @hmrcHeader(
-        Header(
-            homepageUrl = "https://www.gov.uk",
-            serviceName = Some(messages("service.name")),
-            serviceUrl = StartController.start().url,
-            language = language.En,
-            signOutHref = signOutHref
-        )
+    @hmrcStandardHeader(
+        serviceName = Some(messages("service.name")),
+        serviceUrl = Some(StartController.start().url),
+        signOutUrl = signOutHref,
+        userResearchBanner = None,
+        phaseBanner = None,
+        displayHmrcBanner = false
     )
 }
 
