--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadForm.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadForm.scala.html
@@ -32,9 +32,25 @@
         error: Option[FormError] = None
 )(implicit request: Request[_], messages: Messages)
 
-@uploadSummary(uploads, removeUrl)
+@uploadSummary(uploads, removeUrl, Some(
+    SummaryListRow(
+        key = Key(content = Text(messages("upload_documents.status.in_progress"))),
+        value = Value(content = HtmlContent(uploadSpinner())),
+        classes = "govuk-!-display-none hidden-spinner-row",
+        actions = None
+    )
+))
 
-<form action="@upscanInitiateResponse.postTarget" method="post" enctype="multipart/form-data">
+<script>
+    function onFileSelect() {
+        document.getElementsByClassName("hidden-spinner-row").item(0).className = "govuk-summary-list__row";
+        document.getElementById("upload-form").className = "govuk-!-display-none";
+        document.getElementById("nidac-continue").disabled = true;
+        document.getElementById("upload-form").submit();
+    }
+</script>
+
+<form id="upload-form" action="@upscanInitiateResponse.postTarget" method="post" enctype="multipart/form-data">
 
     @for(field <- upscanInitiateResponse.formFields) {
         <input type="hidden" name="@field._1" value="@field._2"/>
@@ -45,7 +61,7 @@
         id = "upload-file",
         attributes = Map(
             "accept" -> appConfig.upscan.approvedFileExtensions,
-            "onchange" -> "this.form.submit()"
+            "onchange" -> "javascript:onFileSelect()"
         ),
         label = Label(
             content = Text(messages(if(uploads.isEmpty) "upload_documents.first.label" else "upload_documents.next.label"))
