NF-404 - remove nidac-upload-filename css class

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadSummary.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadSummary.scala.html
@@ -27,7 +27,7 @@
         Some(SummaryListRow(
             key = Key(
                 content = Text(doc._1.fileName),
-                classes = "nidac-upload-filename"
+                classes = "govuk-!-width-three-quarters"
             ),
             value = Value(
                 content = HtmlContent(govukTag(Tag(
