NF-409 - code review suggestions for changing css class using javascript

--- a/app/assets/stylesheets/upload-loading.scss
+++ b/app/assets/stylesheets/upload-loading.scss
@@ -1,5 +1,5 @@
 /* Dynamic spinner for please-wait page within file upload journey */
-.ccms-loader {
+.upload-spinner {
   display: inline-block;
   width: 16px;
   height: 16px;
