--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadSpinner.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadSpinner.scala.html
@@ -16,4 +16,4 @@
 
 @()
 
-<span id="nidac-spinner" class="govuk-body ccms-loader"></span>
+<span id="nidac-spinner" class="govuk-body upload-spinner"></span>
