NF-369 PR Fixes

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/AddressView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/AddressView.scala.html
@@ -46,9 +46,9 @@
           @addressFields(form)
         }
 
-        @internalLink(messages("address.change"), AddressController.onChange())
-
-        @paragraph("")
+        @paragraphHtml {
+            @internalLink(messages("address.change"), AddressController.onChange())
+        }
 
         @continueButton()
     }
