--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
@@ -48,9 +48,9 @@
             @addressFields(form)
         }
 
-        @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange())
-
-        @paragraph("")
+        @paragraphHtml {
+            @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange())
+        }
 
         @continueButton()
     }
