--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CreateClaimSummary.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/CreateClaimSummary.scala.html
@@ -407,11 +407,11 @@
                     ),
                     value = Value(
                         content = HtmlContent(answers.importerContactDetails.map( contactDetails => Seq(
-                            Some(contactDetails.addressLine1),
-                            contactDetails.addressLine2,
-                            contactDetails.addressLine3,
-                            Some(contactDetails.city),
-                            Some(contactDetails.postCode)
+                            Some(contactDetails.importerContactdetails.addressLine1),
+                            contactDetails.importerContactdetails.addressLine2,
+                            contactDetails.importerContactdetails.addressLine3,
+                            Some(contactDetails.importerContactdetails.city),
+                            Some(contactDetails.importerContactdetails.postCode)
                         ).flatten.map(HtmlFormat.escape(_)).mkString("<br>")).getOrElse(""))
                     ),
                     actions = if(!withActions) None else  Some(Actions(
