BAU - upload document browser back fix

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadForm.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/uploadForm.scala.html
@@ -52,6 +52,7 @@
         id = "upload-file",
         attributes = Map(
             "accept" -> appConfig.upscan.approvedFileExtensions,
+            "autocomplete" -> "off",
             "onchange" -> "javascript:onFileSelect()"
         ),
         label = Label(
