NF-457 - add audit ref as hidden input field on address form

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/AddressView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/AddressView.scala.html
@@ -44,6 +44,8 @@
             hint = Some(Html(messages("address.hint")))
         ) {
           @addressFields(form)
+
+          @components.hiddenInput("auditRef", form.value.flatMap(add => add.auditRef).getOrElse(""))
         }
 
         @paragraphHtml {
