NF-460 Match address labels to ALF

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/addressInputFields.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/addressInputFields.scala.html
@@ -33,7 +33,7 @@
     form = form,
     id = "addressLine2",
     name = "addressLine2",
-    label = "",
+    label = "address.line2.heading",
     hiddenLabel = Some("address.line2.hidden"),
     autocomplete = Some("address-line2")
 )
@@ -42,7 +42,7 @@
     form = form,
     id = "addressLine3",
     name = "addressLine3",
-    label = "",
+    label = "address.line3.heading",
     hiddenLabel = Some("address.line3.hidden"),
     autocomplete = Some("address-line3")
 )
