--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/hiddenInput.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/hiddenInput.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2021 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,18 +12,8 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package uk.gov.hmrc.nationalimportdutyadjustmentcentrefrontend.models.create
+@(name: String, value: String)
 
-import play.api.libs.json.{Json, OFormat}
-
-case class AuditableImporterContactDetails(importerContactdetails: ImporterContactDetails, auditRef: String)
-
-object AuditableImporterContactDetails {
-  implicit val format: OFormat[AuditableImporterContactDetails] = Json.format[AuditableImporterContactDetails]
-
-  def apply(importerContactdetails: ImporterContactDetails, auditRef: String): AuditableImporterContactDetails =
-    new AuditableImporterContactDetails(importerContactdetails, auditRef)
-
-}
+<input name=@name type="hidden" value=@value>
