NF-469 moved address change link in line with Continue button and added some css to space it

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/internalLink.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/components/internalLink.scala.html
@@ -14,8 +14,8 @@
  * limitations under the License.
  *@
 
-@(text: String, call: Call)
+@(text: String, call: Call, classes: Option[String] = None)
 
-<a class="govuk-link govuk-link--no-visited-state" href="@{call.url}">
+<a class="govuk-link govuk-link--no-visited-state @classes" href="@{call.url}">
  @text
 </a>
