--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/AddressView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/AddressView.scala.html
@@ -49,9 +49,9 @@
         }
 
         @paragraphHtml {
-            @internalLink(messages("address.change"), AddressController.onChange())
+            @continueButton()
+            @internalLink(messages("address.change"), AddressController.onChange(), classes = Some("address-change-link"))
         }
 
-        @continueButton()
     }
 }
