--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
@@ -51,9 +51,9 @@
         }
 
         @paragraphHtml {
-            @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange())
+            @continueButton()
+            @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange(), classes = Some("address-change-link"))
         }
 
-        @continueButton()
     }
 }
