NF-469 use gov uk style instead of css

--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/AddressView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/AddressView.scala.html
@@ -50,7 +50,7 @@
 
         @paragraphHtml {
             @continueButton()
-            @internalLink(messages("address.change"), AddressController.onChange(), classes = Some("address-change-link"))
+            @internalLink(messages("address.change"), AddressController.onChange(), classes = Some("govuk-!-padding-left-4"))
         }
 
     }
