--- a/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
+++ b/app/uk/gov/hmrc/nationalimportdutyadjustmentcentrefrontend/views/makeclaim/ImporterDetailsView.scala.html
@@ -52,7 +52,7 @@
 
         @paragraphHtml {
             @continueButton()
-            @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange(), classes = Some("address-change-link"))
+            @internalLink(messages("importer-details.change"), ImporterDetailsController.onChange(), classes = Some("govuk-!-padding-left-4"))
         }
 
     }
